@@ -4,7 +4,10 @@ import my.reqqpe.rseller.Main;
 import my.reqqpe.rseller.models.item.Item;
 import org.bukkit.configuration.ConfigurationSection;
 
-import java.util.*;
+import java.util.ArrayList;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
 
 public class AutoSellManager {
 
@@ -93,6 +96,6 @@ public class AutoSellManager {
 
 
     public List<Item> getCategoryItems(String category) {
-        return categories.getOrDefault(category, Collections.emptyList());
+        return categories.getOrDefault(category, List.of());
     }
 }
